welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:13: error: Unmatched closing brace '}' ignored here
 }
 ^